# school-manager

./: main.py  pyproject.toml
.github/: copilot-instructions.md
api/: main.py
api/dependecies/: dependency.py  models.py
api/routers/: delete.py  get.py  items.py  post.py  put.py
api/test/test_get/: test_get_admins.py  test_get_assignments.py  test_get_classes.py  test_get_learners.py  test_get_subjects.py  test_get_submitted_assignments.py
api/test/test_post/: test_admin.py  test_assignment.py  test_class.py  test_post_endpoints.py  test_schooler.py  test_subject.py  test_submitted_assignment.py  test_teacher.py
database/mongodb/: db.py
database/postgres/: __init__.py  db.py
