[project]
name = "school-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "psycopg2>=2.9.10",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "sqlmodel>=0.0.24",
]
